--- a/src/js/dialogs/MainDialog/MainDialog.html
+++ b/src/js/dialogs/MainDialog/MainDialog.html
@@ -25,9 +25,10 @@
                             <option value="dos">Directional occlusion shading</option>
                             <option value="lao">Local ambient occlusion</option>
                             <option value="mcs">Single scattering</option>
-                            <option value="mcm" selected>Multiple scattering</option>
+                            <option value="mcm">Multiple scattering</option>
                             <option value="depth">Depth image</option>
                             <option value="foveated">Foveated renderer</option>
+                            <option value="basic" selected>Basic renderer</option>
                         </select>
                     </ui-field>
                     <div bind="rendererSettingsContainer"></div>
