BasicRenderer renders random colors with proper pipeline

--- a/src/js/dialogs/MainDialog/MainDialog.html
+++ b/src/js/dialogs/MainDialog/MainDialog.html
@@ -28,6 +28,7 @@
                             <option value="mcm">Multiple scattering</option>
                             <option value="depth">Depth image</option>
                             <option value="foveated">Foveated renderer</option>
+                            <option value="foveated2">Foveated renderer2</option>
                             <option value="basic" selected>Basic renderer</option>
                         </select>
                     </ui-field>
