foveated rendering (2) initial result

--- a/src/js/dialogs/MainDialog/MainDialog.html
+++ b/src/js/dialogs/MainDialog/MainDialog.html
@@ -28,8 +28,8 @@
                             <option value="mcm">Multiple scattering</option>
                             <option value="depth">Depth image</option>
                             <option value="foveated">Foveated renderer</option>
-                            <option value="foveated2">Foveated renderer2</option>
-                            <option value="basic" selected>Basic renderer</option>
+                            <option value="foveated2" selected>Foveated renderer2</option>
+                            <option value="basic">Basic renderer</option>
                         </select>
                     </ui-field>
                     <div bind="rendererSettingsContainer"></div>
