--- a/src/js/dialogs/MainDialog/MainDialog.html
+++ b/src/js/dialogs/MainDialog/MainDialog.html
@@ -27,9 +27,7 @@
                             <option value="mcs">Single scattering</option>
                             <option value="mcm">Multiple scattering</option>
                             <option value="depth">Depth image</option>
-                            <option value="foveated">Foveated renderer</option>
-                            <option value="foveated2" selected>Foveated renderer2</option>
-                            <option value="basic">Basic renderer</option>
+                            <option value="foveated" selected>Foveated renderer</option>
                         </select>
                     </ui-field>
                     <div bind="rendererSettingsContainer"></div>
